css/core.css
*,
*:after,
*:before
{
	-moz-box-sizing:    border-box;
	-webkit-box-sizing: border-box;
	box-sizing:         border-box;
}

*
{
	-moz-transition:    all 0.2s ease-out;
	-o-transition:      all 0.2s ease-out;
	-webkit-transition: all 0.2s ease-out;
	transition:         all 0.2s ease-out;
}

html,
body,
aside
{
	height: 100%;
}

body
{
	font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Lucida, Arial, Helvetica, sans-serif;
	padding:     0;
	margin:      0 auto;
	color:       #333;
	font-size:   1.2em;
	line-height: 1.3;
	width:       76%;
	background:  #daeeee;
	position:    relative;
}

#main,
aside
{
	min-height: 100%;
	padding: 20px 30px 50px;
}

#main
{
	margin-right: 360px;
}

h2.top
{
	margin-top: 0;
}

#main,
.ads
{
	background: #f0f8f9;
}

aside
{
	position: absolute;
	top:      0;
	right:    0;
	bottom:   0;
	width:    360px;
	text-align: center;
}

aside .title
{
	font-weight: bold;
	font-size:   2.2em;
	text-shadow: 1px 1px 0 #f0f8f9;
	margin-top:  -6px;
	text-align:  center;
}

.tagline
{
	color:      #777;
	font-style: italic;
}

.divider
{
	border: solid #f0f8f9;
	border-width: 1px 0;
	height: 3px;
	margin: 20px 40px;
	clear: left;
}

#main .divider
{
	border-color: #daeeee;
}

.social
{
	margin-left:  6px;
	padding-left: 0;
	list-style:   none;
	margin-top:   1px;
}

.social li
{
	background: #4f88b8;
	display: block;
	height: 30px;
	width: 30px;
	margin: 0 3px;
	float: left;
	-moz-border-radius: 15px;
	-webkit-border-radius: 15px;
	border-radius: 15px;
}

.social i
{
	background: url(/img/social-icons.png?v3);
	display: block;
	position: absolute;
	height: 16px;
	width: 16px;
	margin: 7px;
}

i.github    { background-position: -16px  0; }
i.google    { background-position: -32px  0; }
i.instagram { background-position: -48px  0; }
i.linkedin  { background-position: -64px  0; }
i.steam     { background-position: -80px  0; }
i.tumblr    { background-position: -96px  0; }
i.twitter   { background-position: -112px 0; }

.ads
{
	margin-top: 20px;
	padding: 15px;
	padding-bottom: 11px;
}

aside br,
.ads br
{
	clear: left;
}

.ad-button
{
	float: left;
}

.ad-button.ad-right
{
	margin-left: 20px;
}

a
{
	color: #4f88b8;
	text-decoration: none;
}

a:hover
{
	color: #009;
	text-decoration: underline;
}

p
{
	line-height: 1.4;
}

pre,
code
{
	background: #fdfdfd;
}

pre
{
	padding: 20px;
	line-height: 1.4;
}

time,
h4 span
{
	font-family: monospace;
	font-weight: normal;
}

.nowrap
{
	white-space: nowrap;
}

td
{
	vertical-align: top;
}

.hide
{
	display: none;
}

h4
{
	text-align: center;
	margin-bottom: 10px;
}

.avatar
{
	float: left;
	margin: 0 20px 20px 0;
}

h1
{
	margin: 0;
	margin-top: 16px;
}

.hide
{
	display: none;
}

time,
h4 span
{
	color: #999;
}

h3
{
	clear: both;
}

#disqus_thread
{
	margin-top: 40px;
}

@media only screen and (max-width : 900px)
{
	body
	{
		overflow-x: hidden;
	}

	body,
	#main
	{
		width: 360px;
		margin: 0;
	}

	#main
	{
		font-size: 0.8em;
	}

	aside
	{
		position:   relative;
		display:    inline-block;
		height:     auto;
		min-height: 0;
	}

	.avatar
	{
		height: 84px;
		width: 84px;
	}
}

